对邮件日志进行修改。。。